<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Sort by -->
    <!-- Menu options -->
    <string name="sort_pop_desc">Sort by Popularity</string>
    <string name="sort_vote_count_desc">Sort by Top Rated</string>
    <string name="sort_favorites">Sort by Favorites</string>
    <!-- Shared Preferences -->
    <string name="pref_sort_method_key">SORT_METHOD</string>
    <!--<string name="tmdb_sort_pop_desc">popularity.desc</string>
    <string name="tmdb_sorte_vote_count_desc">vote_count.desc</string>-->
    <string name="tmdb_sort_popular">popular</string>
    <string name="tmdb_sort_top_rated">top_rated</string>
    <string name="tmdb_sort_favorites">favorites</string>

    <!-- Passing the Movie in the Intent -->
    <string name="parcel_movie">PARCEL_MOVIE</string>
    <string name="parcel_trailer">PARCEL_TRAILER</string>
    <string name="parcel_review">PARCEL_REVIEW</string>

    <!-- Movie details -->
    <!-- Titles -->
    <string name="release_date_title">Release Date</string>
    <string name="vote_average_title">User Rating</string>
    <string name="overview_title">Plot Synopsis</string>
    <string name="trailers_title">Trailers</string>
    <string name="reviews_title">Reviews</string>
    <string name="backdrop_content_description">Movie poster image thumbnail</string>
    <string name="poster_content_description">Movie poster</string>

    <!-- Error messages -->
    <!-- Details activity with null intent -->
    <string name="error_message">Movie data not available.</string>
    <!-- Error getting results -->
    <string name="error_message_results">Failed to get results. Tap here to try again.</string>
    <!-- Error internet connections -->
    <string name="error_message_network">Check your internet connection. Tap here to try again.</string>

    <!-- Reviews -->
    <string name="review_author_label">Author</string>
    <string name="review_content_label">Review</string>
</resources>
