<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backdrop_path_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/backdrop_content_description"
            android:scaleType="centerCrop" />

        <!-- Favorite -->
        <Button
            android:id="@+id/btnFavorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp" />

        <!-- Release Date -->
        <TextView
            android:id="@+id/release_date_title_tv"
            android:text="@string/release_date_title"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/text" />

        <!-- Vote Average -->
        <TextView
            android:id="@+id/vote_average_title_tv"
            android:text="@string/vote_average_title"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/vote_average_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/text" />

        <!-- Overview -->
        <TextView
            android:id="@+id/overview_title_tv"
            android:text="@string/overview_title"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/overview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="15sp"
            android:textColor="@color/text" />

        <!-- Trailers -->
        <TextView
            android:id="@+id/trailers_title_tv"
            android:text="@string/trailers_title"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/rv_trailers"
            android:scrollbars="none"
            android:layout_marginBottom="?attr/actionBarSize" />
        <!-- RecyclerView was not showing the last element. This was the workaround that fixed it -->

        <TextView
            android:id="@+id/tv_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="16dp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_height="42dp"
            android:layout_width="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </LinearLayout>

</ScrollView>